Remove OS detection functions

--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
     firebase.analytics();
     firebase.performance();
   </script>
-  <script>
+  <!-- <script>
     function getStandalone(){
       return (window.navigator.standalone === true || window.matchMedia('(display-mode: standalone)').matches);
     }
@@ -61,7 +61,7 @@
     function isAndroid(){
       return window.navigator.userAgent.includes('Android');
     }
-  </script>
+  </script> -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
