--- a/editor/hike.html
+++ b/editor/hike.html
@@ -133,7 +133,7 @@
         db.collection('hikes').doc(hikeId).get().then(async function (snapshot) {
             main.hike = snapshot.data();
             main.path.clear();
-            for(var i = 0; i < main.hike.path.length; i++){
+            for (var i = 0; i < main.hike.path.length; i++) {
                 var latLng = main.hike.path[i];
                 console.log(latLng);
                 main.path.push(new google.maps.LatLng(latLng.latitude, latLng.longitude));
@@ -213,8 +213,8 @@
                     //main.path.clear();
                     var lats = [];
                     var lons = [];
-                    var re1 = /lat="([0-9]{1,3}\.[0-9]+)"/g;
-                    var re2 = /lon="([0-9]{1,3}\.[0-9]+)"/g;
+                    var re1 = /lat=["']([0-9]{1,3}\.[0-9]+)["']/g;
+                    var re2 = /lon=["']([0-9]{1,3}\.[0-9]+)["']/g;
                     var m;
                     do {
                         m = re1.exec(evt.target.result);
@@ -230,7 +230,7 @@
                         }
                     } while (m);
                     console.log(lons);
-                    for(var i = 0; i < Math.min(lats.length, lons.length); i++){
+                    for (var i = 0; i < Math.min(lats.length, lons.length); i++) {
                         main.path.push(new google.maps.LatLng(lats[i], lons[i]));
                     }
                     console.log(main.path);
@@ -279,6 +279,30 @@
                 }
                 main.path.removeAt(e.vertex);
             });
+
+            // // Replace this with your URL.
+            // var TILE_URL = 'https://heatmap-external-b.strava.com/tiles-auth/run/hot/{z}/{x}/{y}.png?v=19';
+
+            // // Name the layer anything you like.
+            // var layerID = 'my_custom_layer';
+
+            // // Create a new ImageMapType layer.
+            // var layer = new google.maps.ImageMapType({
+            //     name: layerID,
+            //     getTileUrl: function (coord, zoom) {
+            //         console.log(coord);
+            //         var url = TILE_URL
+            //             .replace('{x}', coord.x)
+            //             .replace('{y}', coord.y)
+            //             .replace('{z}', zoom);
+            //         return url;
+            //     },
+            //     tileSize: new google.maps.Size(256, 256),
+            //     minZoom: 1,
+            //     maxZoom: 20
+            // });
+            // map.mapTypes.set(layerID, layer);
+            // map.setMapTypeId(layerID);
 
             poly.setMap(map);
 
